site/themes/bxb/static/less/styles.less
/* ... */
#video {
    .videoContainer {
        position: relative;

        .middle {
            transform: translateY(-50%) translateX(-50%);
        }
    }
}
//section progress

.slidingGallery {
    .owl-carousel {
      background-color: #000;
        .item {
            border: 4px solid black;

            .caption {
                background-color: #000;
                color: #fff;
                bottom: 1em;
                left: 1em;
                padding: 10px;
                position: absolute;

                h4 {
                    color: #fff;
                    text-align: left;
                }
            }
        }
    }
}

#contact {
    .middle {
        z-index: -100;
    }

    .overlay-container {
        @media @bs3-xs {
            position: relative;
        }
    }

    .contacts {
        padding: 20px;
        color: #FFFFFF;
        font-size: 1em;
        text-align: center;
    }
}

.overlay-container {
    width: 100%;
    height: 100%;
    top: 0;
    left: 0;
    position: absolute;
}

.overlay {
    .vertical-align();
    position: absolute;
    left: 50%;
    -webkit-transform: translateX(-50%);
    -ms-transform: translateX(-50%);
    transform: translateX(-50%);
}

.highlight-yellow {
    color: yellow;
}

.bg-black {
    background-color: rgb(65, 71, 74);
    color: white;
}

.claim {
    text-align: center;
    /* a project by: */
    font-size: 15px;
    color: #000000;
    letter-spacing: 0;
}

.owl-nav {
    width: 100%;
    color: yellow;
    position: absolute;
    top: 50%;
    transform: translateY(-50%);
    padding: 0 10px;

    .owl-prev {
        float: left;
    }

    .owl-next {
        float: right;
    }
}

section {
    height: 100%;
    width: 100%;
    position: relative;
    margin: 0;
    @media @bs3-xs {
        height: auto;
        margin-bottom: 20px;

        .middle {
            transform: translateY(0);
            margin-top: auto;
        }
    }
}

.section-big {
    min-height: 100%;
    height: auto;
}

body {
    height: 100%;
}

.ghostchef {
    margin-top: 20px;
    width: 90%;
}

.typed-cursor {
    opacity: 1;
    -webkit-animation: blink 0.7s infinite;
    -moz-animation: blink 0.7s infinite;
    animation: blink 0.7s infinite;
}
@keyframes blink {
    0% {
        opacity: 1;
    }

    50% {
        opacity: 0;
    }

    100% {
        opacity: 1;
    }
}
@-webkit-keyframes blink {
    0% {
        opacity: 1;
    }

    50% {
        opacity: 0;
    }

    100% {
        opacity: 1;
    }
}
@-moz-keyframes blink {
    0% {
        opacity: 1;
    }

    50% {
        opacity: 0;
    }

    100% {
        opacity: 1;
    }
}

.owl-nav {
    @media @bs3-xs {
        display: none;
    }
}
// bxb footer

.bxb_logo {
    width: 12%;
    max-width: 200px;
    height: 60px;
    position: absolute;
    top: 0;
    left: 30px;
    border: 0;
    overflow: visible;
    z-index: 30;
    background-image: url("../assets/bxb_logo_ver.svg");
    background-position: center;
    background-size: 100%;
}

.bxb_logo img {
    transition: 0.4s;
    width: 100%;
    max-width: 170px;
    opacity: 0;
    height: 60px;
}

.bb_footer {
    //min-width: 500px;
    width: 100%;
    position: relative;
    background-color: #000;
    color: #fff;
    // overflow: hidden;
    padding: 30px 0px;

    @media @bs3-xs {
        margin-top: 60px;
    }
}

.bb_footer .footerRightSec {
    text-align: right;
}

.bb_footer h1 {
    font-family: 'Brown-Bold';
    color: #fff;
    text-align: left;
}

.bb_footer p {
    color: #fff;
}

.bb_footer .social-network-link {
    width: 50px;
    height: 50px;
    display: inline-block;
    background-position: center;
    background-size: 50px;
    color: transparent;
}

.sn-linkedIn {
    background-image: url("../assets/button_linkedIn.png");
}

.sn-facebook {
    background-image: url("../assets/button_facebook.png");
}

.sn-twitter {
    background-image: url("../assets/button_twitter.png");
}

.sn-wechat {
    background-image: url("../assets/button_wechat.png");
    cursor: pointer;
}

.sn-wechat .qrcode {
    position: absolute;
    width: 200px;
    height: 200px;
    border: 2px solid #ddd;
    border-radius: 4px;
    right: 0;
    top: -200px;
    display: none;
}

.sn-wechat .qrcode.qrcode_open {
    display: block;
}

.sn-wechat .qrcode .closeQR {
    width: 30px;
    height: 30px;
    position: absolute;
    right: -11px;
    top: -11px;
    background-color: white;
    background-image: url("../assets/iconBkgMenu.png");
    transform: rotate(45deg);
    border-radius: 15px;
    border: 1px solid #ddd;
    background-size: 20px;
    background-position: center;
    background-repeat: no-repeat;
}

.sn-wechat .qrcode:after {
    content: "";
    position: absolute;
    bottom: -10px;
    right: 30px;
    border-width: 12px 12px 0;
    border-style: solid;
    border-color: #fff transparent;
    display: block;
    width: 0;
}

.sn-wechat .qrcode img {
    width: 100%;
}

#single-project-teaser{
  .overlay-container{
    .transition(background-color 1s);

    h2{
      color: #fff;
    }

    h1{
      color:#fff;
    }

    &:hover{
      background-color: rgba(0, 0, 0, .4);
    }
  }

}

#lightgallery {
  padding: 15px;
  .gallery-item{
    padding: 0px;
    border: 4px solid black;
  }
}

